# MaceOld

./: .gitignore  .gitmodules  CMakeLists.txt
cmake-modules/android/Internal/CPack/: CPack.OSXScriptLauncher.in
engine/: CMakeLists.txt
engine/bridge/: Log.h  PlatformEngine.h
engine/include/: Clock.h  Core.h  CoreEngine.h  Engine.h  EventSystem.h  Log.h  Test.h
engine/include/engine/: EngineImpl.h
engine/include/events/: AppInitEvent.h  AppResumeEvent.h  Event.h  EventBase.h  EventType.h  Events.h
engine/include/graphics/: GLContext.h  Interpolator.h  Shader.h  Texture.h  gl3stub.h
engine/include/math/: vecmath.h
engine/include/rendering/: TapCamera.h  TeapotRenderer.h  TexturedTeapotRenderer.h  teapot.inl
engine/ndk/: MaceNdk.cmake
engine/ndk/src/: AndroidEngine.cpp  AndroidEngine.h  AndroidLog.cpp  AssetUtil.cpp  AssetUtil.h  DoubleTapDetector.cpp  DoubleTapDetector.h  DragDetector.cpp  DragDetector.h  Egl.cpp  Egl.h  GestureDetector.cpp  GestureDetector.h  JNIHelper.cpp  JNIHelper.h  Log.cpp  NDKHelper.h  OriginalEngine.cpp  OriginalEngine.h  PinchDetector.cpp  PinchDetector.h  SensorManager.cpp  SensorManager.h  TapDetector.cpp  TapDetector.h  Util.cpp  Util.h  android_debug.h
engine/src/: Clock.cpp  CoreEngine.cpp  Engine.cpp  EngineImpl.cpp  Event.cpp  EventSystem.cpp  GLContext.cpp  Interpolator.cpp  Shader.cpp  TapCamera.cpp  TeapotRenderer.cpp  Texture.cpp  TexturedTeapotRenderer.cpp  gl3stub.cpp  vecmath.cpp
game/: CMakeLists.txt
game/include/: Game.h
game/src/: Game.cpp
